significant refactor. Large winrate improvements on simpler decks. Moving to implement ISMCTS to help harder decks